# windows-app-locktime

./: .clang-format  .gitignore  CLAUDE.md  README.md
.github/workflows/: release.yml
backend/: ARCHITECTURE.md  CMakeLists.txt  Makefile  go.mod  go.sum
backend/cmd/blocker/: main.cpp  main.go
backend/cmd/locktime-svc/: main.cpp  main.go  main_darwin.go
backend/internal/api/: frontend.go  handlers.go  ifeo_windows.go  system_stub.go  system_windows.go
backend/internal/db/: queries.go  schema.go
backend/internal/engine/: engine.go  engine_test.go
backend/internal/frontend/: embed.go
backend/internal/service/: nginx_windows.go  service.go  service_darwin.go
backend/internal/watcher/: watcher.go  watcher_common.go  watcher_darwin.go
backend/src/common/: constants.h  utils.cpp  utils.h
backend/src/db/: database.cpp  database.h
backend/src/engine/: engine.cpp  engine.h
backend/src/rpc/: locktime_service.cpp  locktime_service.h
backend/src/service/: service_darwin.cpp  service_manager.h  service_windows.cpp
backend/src/watcher/: watcher.h  watcher_darwin.cpp  watcher_windows.cpp
desktop/: electron-builder.yml  index.html  package-lock.json  package.json  vite.config.ts
desktop/electron/: locktime-rpc.ts  main.ts  preload.ts
desktop/public/icons/: icon.icns
desktop/scripts/: generate-proto.js
desktop/src/: App.tsx  index.css
desktop/src/api/: client.test.ts  client.ts
desktop/src/components/: CountdownTimer.tsx  DayPicker.tsx  ProcessPicker.tsx  RuleForm.tsx  RuleStatusBadge.tsx  ServiceStatusBanner.tsx  ThemeToggle.tsx  UsageBar.tsx
desktop/src/components/layout/: Sidebar.tsx  TitleBar.tsx
desktop/src/contexts/: ThemeContext.tsx
desktop/src/lib/: schedule-convert.ts
desktop/src/pages/: AddRule.tsx  BlockedPopup.tsx  Dashboard.tsx  EditRule.tsx  Rules.tsx  Stats.tsx
desktop/src/types/: api.ts
frontend/: .env.production  electron-builder.yml  package.json  tsconfig.electron.json  vite.config.ts
frontend/electron/: main.ts
frontend/public/icons/: README.md
frontend/src/: App.tsx
frontend/src/api/: client.ts
installer/: locktime.nsi
